--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # Godot 4+ specific ignores
 .godot/
+#Outside Addons
 addons/zylann.editor_debugger/dock.gd
 addons/zylann.editor_debugger/dock.tscn
 addons/zylann.editor_debugger/LICENSE.md
 addons/zylann.editor_debugger/plugin.cfg
 addons/zylann.editor_debugger/plugin.gd
 addons/zylann.editor_debugger/util.gd
+addons/signal_manager/resources/rwar.tres
+new_script.gd
