--- a/addons/signal_manager/plugin.cfg
+++ b/addons/signal_manager/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
 name="Signal Manager"
-description="Flexible General Purpose Signal Manager"
+description="(Requrires GlobalUtilities addon) Flexible General Purpose Signal Manager"
 author="Ceejforce"
 version="0.1"
 script="plugin.gd"
